--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Frigate hass.io addons
-url: "https://github.com/blakeblackshear/frigate-hass-addons"
-maintainer: blakeblackshear
+url: "https://github.com/homeassistant7/frigate-0.10.1.git"
+maintainer: homeassistant7
